@@ -1,0 +1,40 @@
+<chummer>
+    <priorities>
+        <priority>
+            <name>B - Adept, Magician, or Technomancer</name>
+            <talents amendoperation="recurse">
+                <talent amendoperation="addnode">
+                    <name>Aspected Conjurer - 5 Magic</name>
+                    <value>Aspected Conjurer</value>
+                    <qualities>
+                        <quality>Aspected Magician</quality>
+                    </qualities>
+                    <skillgroupchoices>
+                        <skillgroup>Conjuring</skillgroup>
+                    </skillgroupchoices>
+                    <magic>5</magic>
+                    <skillgroupqty>1</skillgroupqty>
+                    <skillgroupval>4</skillgroupval>
+                    <skillgrouptype>grouped</skillgrouptype>
+                    <forbidden>
+                        <oneof>
+                            <metatype>A.I.</metatype>
+                        </oneof>
+                    </forbidden>
+                </talent>
+                <talent>
+                    <name>Aspected Magician - 5 Magic</name>
+                    <spells>8</spells>
+                    <skillgroupchoices amendoperation="replace">
+                        <skillgroup>Enchanting</skillgroup>
+                        <skillgroup>Sorcery</skillgroup>
+                    </skillgroupchoices>
+                </talent>
+                <talent>
+                    <name>Apprentice - 5 Magic</name>
+                    <spells>4</spells>
+                </talent>
+            </talents>
+        </priority>
+    </priorities>
+</chummer>
