@@ -35,6 +35,8 @@ Application Changes:
 - Fixed an issue where the Armor (Drone) vehicle mod would not correctly override the armor value of the drone.
 - If a character has unused contact points, spell points, or complex form points at character creation, the character validator now warns of this the same way it does of unused knowledge skill points, skill points, attribute points, and special attribute points.
 - Barehanded Adept properly always doubles spell drain instead of doubling the constant component of spell drain codes and not affecting spells cast at forces where drain is dictated by the minimum spell drain of 2 DV. Fixes #5022.
+- Refactored the selectquality and addqualities improvements to work in the same manner. Allows for the use of Rating on selectquality elements. Implements #5030
+- Changed the calculation for Swim speed to always use cyberlimb attributes as appropriate. Closes #5031
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
